--- a/sln/vc9/arithmetic/arithmetic.vcproj
+++ b/sln/vc9/arithmetic/arithmetic.vcproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="9,00"
+	Version="9.00"
 	Name="arithmetic"
 	ProjectGUID="{26F83C30-0E87-4474-8F0F-EAB7CF3D97C4}"
 	RootNamespace="arithmetic"
@@ -105,7 +105,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="2"
 				EnableIntrinsicFunctions="true"
-				AdditionalIncludeDirectories="../../include"
+				AdditionalIncludeDirectories="../../../include"
 				PreprocessorDefinitions="WIN32;NDEBUG;_LIB"
 				RuntimeLibrary="2"
 				EnableFunctionLevelLinking="true"
